--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css"
   </head>
   <body>
+    <header>
+      
+    </header>
 
   </body>
 </html>
