Remove unneeded image, started building header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   </head>
   <body>
     <header>
-      
+      <img src="resources/images/img-tea-cozy-logo.png">
+      <nav>
+        <p> <a href="">Mission</a> </p>
+        <p> <a href="">Featured Tea</a> </p>
+        <p> <a href="">Locations</a> </p>
+      </nav>
     </header>
 
+    <div class="hero">
+
+    </div>
   </body>
 </html>
