--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css"
   </head>
   <body>
-    <header>
+    <header class="flex-container">
       <img src="resources/images/img-tea-cozy-logo.png">
       <nav>
-        <p> <a href="">Mission</a> </p>
-        <p> <a href="">Featured Tea</a> </p>
-        <p> <a href="">Locations</a> </p>
+        <span> <a href="#mission">Mission</a> </span>
+        <span> <a href="">Featured Tea</a> </span>
+        <span> <a href="">Locations</a> </span>
       </nav>
     </header>
 
-    <div class="hero">
+    <div class="main">
+      <div id="mission" class="flex=container">
 
+      </div>
     </div>
   </body>
 </html>
