--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     </header>
 
     <div class="main">
-      <div id="mission" class="flex=container">
-
+      <div id="mission" class="flex-container">
+        <div class="content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
     </div>
   </body>
