--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <img src="resources/images/img-tea-cozy-logo.png">
       <nav>
         <span> <a href="#mission">Mission</a> </span>
-        <span> <a href="">Featured Tea</a> </span>
-        <span> <a href="">Locations</a> </span>
+        <span> <a href="#store">Featured Tea</a> </span>
+        <span> <a href="#location">Locations</a> </span>
       </nav>
     </header>
 
@@ -22,6 +22,42 @@
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
+
+      <div id="store">
+        <div class="content">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+          <div class="flex-container">
+
+            <div class="product">
+              <img src="resources/images/img-berryblitz.jpg">
+              <span>Fall Berry Blitz Tea</span>
+            </div>
+
+            <div class="product">
+              <img src="resources/images/img-spiced-rum.jpg">
+              <span>Spiced Rum Tea</span>
+            </div>
+
+            <div class="product">
+              <img src="resources/images/img-donut.jpg">
+              <span>Seasonal Donuts</span>
+            </div>
+
+            <div class="product">
+              <img src="resources/images/img-myrtle-ave.jpg">
+              <span>Myrtle Ave Tea</span>
+            </div>
+
+            <div class="product">
+              <img src="resources/images/img-bedford-bizarre.jpg">
+              <span>Bedford Bizarre Tea</span>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
