--- a/index.html
+++ b/index.html
@@ -83,7 +83,15 @@
           </div>
         </div>
       </div>
+
+      <div id="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>Contact@TheTeaCozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
     </div>
 
-    <footer></footer>
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
 </html>
